# slicemap

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/slicemap/: __init__.py  __main__.py  analyze.py  cli.py  dataset.py  metrics.py  render.py  slicing.py
tests/: test_analyze.py  test_dataset_cli.py  test_metrics_slicing.py
